--- a/p8105_hw2_jh4054.rmd
+++ b/p8105_hw2_jh4054.rmd
@@ -11,6 +11,9 @@ output:
 
 This R Markdown for hw2 reinforces skills from Data Wrangling.
 
+### Setup
+
+Load packages and set specifications for visual outputs
 ```{r setup, collapse=TRUE}
 #load packages
 library(tidyverse)
@@ -26,4 +29,64 @@ knitr::opts_chunk$set(
   out.width = "90%"
 )
 ```
+
+### Problem 1
+
+```{r, collapse=TRUE}
+#read & clean data files
+nyc_trans = read_csv("./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv") %>% 
+  janitor::clean_names() %>% 
+  select(line:entry, vending, ada) %>% 
+  mutate(entry = ifelse(nyc_trans$entry == "YES", "TRUE", "FALSE"))
+```
+
+1. Write a short paragraph about this dataset – explain briefly what variables the dataset contains, describe your data cleaning steps so far, and give the dimension (rows x columns) of the resulting dataset. Are these data tidy?
+
+The NYC Transit dataset describes parameters for every entrance and exit in each NYC subway station. Details for each location include coordinates, routes served, vending, staffing, and ADA compliance. Inital cleaning involved 1) changing variable names to snake case, 2) mutating the `entry` variable from a character to logical variable - `TRUE` for the presence of an entry and `FALSE` no entry. Additionally, only select variables of interest were retained: line, station, name, station latitude / longitude, routes served, entry, vending, entrance type, and ADA compliance. The initial dataset is untidy, each route number is listed as a separate variable with the route name as value. After abovementioned cleaning steps, the dimensions of the resulting dataset is `r dim(nyc_trans)`
+
+2. Answer the following questions using these data:
+
+* How many distinct stations are there? Note that stations are identified both by name and by line (e.g. 125th St A/B/C/D; 125st 1; 125st 4/5); the distinct function may be useful here.
+* How many stations are ADA compliant? 
+* What proportion of station entrances / exits without vending allow entrance?
+* Reformat data so that route number and route name are distinct variables. How many distinct stations serve the A train? Of the stations that serve the A train, how many are ADA compliant? --> need to tidy data 
+
+```{r}
+#dimensions
+dim(nyc_trans)
+
+#distinct stations, 356 distinct stations
+nrow(distinct(nyc_trans, station_name))
+
+##356 rows, frequency each unique station name appears.
+plyr::count(nyc_trans$station_name)
+
+#number of ADA compliant entries, multiple ways, 468
+length(which(nyc_trans$ada == TRUE))
+
+#proportion of station entrances&exits without vending that allow entrance => 69 allow entrance out of 183
+#number of exits or entrances without vending = 183
+nrow(filter(nyc_trans, vending == "NO" & entry == "TRUE"))
+#of entrances without vending = 69
+nrow(filter(nyc_trans, vending == "NO"))
+#proportion
+nrow(filter(nyc_trans, vending == "NO" & entry == "TRUE"))/nrow(filter(nyc_trans, vending == "NO"))
+```
+
+```{r}
+#Reformat data so that route number and route name are distinct variables
+nyc_trans_tidy = gather(nyc_trans, key = route_number, value = route_name, route1:route11, na.rm = TRUE)
+```
+
+
+### Problem 2
+
+```{r}
+trash_wheel = readxl::read_excel(path = "./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx") %>% 
+  janitor::clean_names()
+```
+
+
+
+
 
