--- a/p8105_hw2_jh4054.rmd
+++ b/p8105_hw2_jh4054.rmd
@@ -76,8 +76,17 @@ nrow(filter(nyc_trans, vending == "NO" & entry == "TRUE"))/nrow(filter(nyc_trans
 ```{r}
 #Reformat data so that route number and route name are distinct variables
 nyc_trans_tidy = gather(nyc_trans, key = route_number, value = route_name, route1:route11, na.rm = TRUE)
-```
 
+#56 distinct stations serve the A train. 
+nrow(nyc_trans_tidy %>% 
+  filter(route_name == "A") %>% 
+  distinct(station_name, keep_all = TRUE))
+
+#16 stations that serve the A train are ADA compliant
+nrow(nyc_trans_tidy %>% 
+  filter(route_name == "A", ada == TRUE) %>% 
+  distinct(station_name, keep_all = TRUE))
+```
 
 ### Problem 2
 
