--- a/p8105_hw2_jh4054.md
+++ b/p8105_hw2_jh4054.md
@@ -1,19 +1,31 @@
----
-title: "p8105_hw2_jh4054"
-author: "Joy Hsu"
-date: "10/4/2018"
-output: github_document
----
+p8105\_hw2\_jh4054
+================
+Joy Hsu
+10/4/2018
 
 This R Markdown for hw2 reinforces skills from Data Wrangling.
 
 ### Setup
 
 Load packages and set specifications for visual outputs
-```{r setup, collapse=TRUE}
+
+``` r
 #load packages
 library(tidyverse)
+## ── Attaching packages ─────────────────────────────────────────────────────────────── tidyverse 1.2.1 ──
+## ✔ ggplot2 3.0.0     ✔ purrr   0.2.5
+## ✔ tibble  1.4.2     ✔ dplyr   0.7.6
+## ✔ tidyr   0.8.1     ✔ stringr 1.3.1
+## ✔ readr   1.1.1     ✔ forcats 0.3.0
+## ── Conflicts ────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+## ✖ dplyr::filter() masks stats::filter()
+## ✖ dplyr::lag()    masks stats::lag()
 library(ggridges)
+## 
+## Attaching package: 'ggridges'
+## The following object is masked from 'package:ggplot2':
+## 
+##     scale_discrete_manual
 library(janitor)
 library(readxl)
 library(patchwork)
@@ -29,45 +41,66 @@ knitr::opts_chunk$set(
 ### Problem 1
 
 Read & clean NYC Transit Subway dataset
-```{r, collapse=TRUE}
+
+``` r
 
 nyc_trans = read_csv("./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv") %>% 
   janitor::clean_names() %>% 
   select(line:entry, vending, ada) %>% 
   mutate(entry = recode(entry, "YES" = TRUE, "NO" = FALSE))
+## Parsed with column specification:
+## cols(
+##   .default = col_character(),
+##   `Station Latitude` = col_double(),
+##   `Station Longitude` = col_double(),
+##   Route8 = col_integer(),
+##   Route9 = col_integer(),
+##   Route10 = col_integer(),
+##   Route11 = col_integer(),
+##   ADA = col_logical(),
+##   `Free Crossover` = col_logical(),
+##   `Entrance Latitude` = col_double(),
+##   `Entrance Longitude` = col_double()
+## )
+## See spec(...) for full column specifications.
 ```
 
-The NYC Transit dataset describes parameters for each entry and exit point in every NYC subway station. Details for each location include coordinates, routes served, vending, staffing, and ADA compliance. Initial cleaning involved 1) changing variable names to snake case, 2) mutating the `entry` variable from a character to a logical variable: `TRUE` for the presence of an entry and `FALSE` for no entry. Additionally, only select variables of interest were retained: line, station, name, station latitude / longitude, routes served, entry, vending, entrance type, and ADA compliance. The initial dataset was untidy; each route number was listed as a separate column variable. After abovementioned cleaning steps, the dimensions of the resulting dataset is (`r dim(nyc_trans)`)
+The NYC Transit dataset describes parameters for each entry and exit point in every NYC subway station. Details for each location include coordinates, routes served, vending, staffing, and ADA compliance. Initial cleaning involved 1) changing variable names to snake case, 2) mutating the `entry` variable from a character to a logical variable: `TRUE` for the presence of an entry and `FALSE` for no entry. Additionally, only select variables of interest were retained: line, station, name, station latitude / longitude, routes served, entry, vending, entrance type, and ADA compliance. The initial dataset was untidy; each route number was listed as a separate column variable. After abovementioned cleaning steps, the dimensions of the resulting dataset is (1868, 19)
 
 Further details:
 
-1. There are 465 distinct stations, identified by name and line
-2. There are 84 ADA compliant stations
-3. 38% of station entrances/exits without vending allow entrance
+1.  There are 465 distinct stations, identified by name and line
+2.  There are 84 ADA compliant stations
+3.  38% of station entrances/exits without vending allow entrance
 
-```{r, collapse=TRUE}
+``` r
 #dimensions
 dim(nyc_trans)
+## [1] 1868   19
 
 #1. number of distinct stations, identified by name and line
 distinct(nyc_trans, line, station_name) %>% 
   nrow()
+## [1] 465
 
 #2. number of ADA compliant stations
 nyc_trans %>% 
   filter(ada == TRUE) %>%
   distinct(line, station_name) %>% 
   nrow()
+## [1] 84
 
 #3. proprotion of station entrances/exits without vending that allow entrance
 nrow(
   filter(nyc_trans, vending == "NO" & entry == "TRUE")) /
 nrow(
   filter(nyc_trans, vending == "NO"))
+## [1] 0.3770492
 ```
 
 Next, we address the untidy variables by gathering the route number columns. There are 60 stations that serve the A train, of which 17 are ADA compliant.
-```{r, collapse=TRUE}
+
+``` r
 #Reformat data so that route number and route name are distinct variables
 nyc_trans_tidy = nyc_trans %>% 
   gather(key = route_number, value = route_name, route1:route11, na.rm = TRUE) %>% 
@@ -79,18 +112,21 @@ nyc_trans_tidy %>%
   filter(route_name == "A") %>% 
   distinct(line, station_name) %>%
   nrow()
+## [1] 60
 
 #2. number of ADA compliant stations that serve the A train
 nyc_trans_tidy %>% 
   filter(route_name == "A", ada == TRUE) %>% 
   distinct(line, station_name) %>% 
   nrow()
+## [1] 17
 ```
 
 ### Problem 2
 
 Read and clean `trash_wheel` data
-```{r, collapse=TRUE}
+
+``` r
 trash_wheel = readxl::read_excel(path = "./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", sheet = 1, range = "A2:N338") %>% 
   janitor::clean_names() %>% 
   filter(dumpster != "NA") %>% 
@@ -98,8 +134,9 @@ trash_wheel = readxl::read_excel(path = "./data/HealthyHarborWaterWheelTotals201
   mutate(sports_balls = as.integer(round(sports_balls, digits = 0)))
 ```
 
-Read and clean precipitation data for 2016 and 2017. Join datasets for 2016 and 2017. 
-```{r, collapse=TRUE}
+Read and clean precipitation data for 2016 and 2017. Join datasets for 2016 and 2017.
+
+``` r
 #read and clean precipitation data for 2016
 precip_2016 = readxl::read_excel(path = "./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", sheet = 5, range = "A2:B14") %>% 
   janitor::clean_names() %>% 
@@ -122,15 +159,18 @@ precip_2017 = readxl::read_excel(path = "./data/HealthyHarborWaterWheelTotals201
 precip_years = bind_rows(precip_2016, precip_2017)
 ```
 
-####Mr. Trash Wheel
+#### Mr. Trash Wheel
 
 This section explores attributes of the Mr. Trash Wheel dataset.
-```{r, collapse=TRUE}
+
+``` r
 #total precipitation in 2016
 sum(precip_2016$prcp_inches)
+## [1] 39.95
 
 #total precipitation in 2017
 sum(precip_2017$prcp_inches)
+## [1] 32.93
 
 #number of dumpsters filled by month in 2016
 trash_wheel_2016 = trash_wheel %>% 
@@ -139,6 +179,19 @@ trash_wheel_2016 = trash_wheel %>%
 
 plyr::count(trash_wheel_2016$month) %>% 
   arrange(desc(freq))
+##            x freq
+## 1       july    8
+## 2   february    6
+## 3       june    6
+## 4      april    5
+## 5     august    5
+## 6      march    5
+## 7   december    4
+## 8        may    3
+## 9   november    3
+## 10 september    3
+## 11   october    2
+## 12   january    1
 
 #number of dumpsters filled by month in 2017
 trash_wheel_2017 = trash_wheel %>% 
@@ -147,11 +200,25 @@ trash_wheel_2017 = trash_wheel %>%
 
 plyr::count(trash_wheel_2017$month) %>% 
   arrange(desc(freq))
+##            x freq
+## 1      april   18
+## 2     august    8
+## 3        may    8
+## 4       july    5
+## 5      march    4
+## 6       june    3
+## 7   february    2
+## 8   november    2
+## 9    october    2
+## 10 september    2
+## 11   january    1
 
 #total weight in tons of trash in 2016 and 2017
 sum(trash_wheel_2016$weight_tons)
+## [1] 164.59
 
 sum(trash_wheel_2017$weight_tons)
+## [1] 174.84
 
 #median number of sports balls & other trash items in a dumpster, 2016
 trash_wheel %>% 
@@ -162,21 +229,31 @@ trash_wheel %>%
     plastic_bottles = mean(plastic_bottles),
     polystyrene = mean(polystyrene), 
     chip_bags = mean(chip_bags))
+## # A tibble: 5 x 6
+##    year sports_balls glass_bottles plastic_bottles polystyrene chip_bags
+##   <dbl>        <dbl>         <dbl>           <dbl>       <dbl>     <dbl>
+## 1  2014            6         46.8            1877.       2339.     1610.
+## 2  2015           16         32.8            1917.       2503.     1849.
+## 3  2016           26         40.4            2974.       3560.     2752.
+## 4  2017            8         20.5            1998.       1989.     2237.
+## 5  2018            3          6.30           1264.       1404.     1278.
 ```
 
-The Mr. Trash Wheel dataset tracks information about litter collected from the Jones Falls River, from May 2014 to July 2018. Each line of observation corresponds to a filled dumpster, along with weight of dumpster, volume of dumpster, homes powered, and count of trash items: plastic bottles, polystyrene, cigarette butts, glass bottles, chip bags, sports balls. Additionally, monthly precipitation is shown for each year. Total precipitation (inches) in 2016 and 2017 was `r sum(precip_2016$prcp_inches)` and `r sum(precip_2017$prcp_inches)`, respectively. Total weight (tons) of trash collected in 2016 and 2016 was `r sum(trash_wheel_2016$weight_tons)` and `r sum(trash_wheel_2017$weight_tons)`, respectively. In 2016, months with the highest number of filled dumpsters were July (n=8), Feb (n=6), and June (n=6). In 2016, the two months with the highest precipitation were July (6.09") and Feb (5.32"). In 2017, months with the highest number of filled dumpsters were April (n=18), Aug (n=8), and May (n=8). In 2017, the months with the highest precipitation were July (7.09"), May (5.64"), and Aug (4.44"). These trends suggest an association between precipitation level and number of dumpsters filled. In 2016, the median number of sports balls in a dumpster was 26.
+The Mr. Trash Wheel dataset tracks information about litter collected from the Jones Falls River, from May 2014 to July 2018. Each line of observation corresponds to a filled dumpster, along with weight of dumpster, volume of dumpster, homes powered, and count of trash items: plastic bottles, polystyrene, cigarette butts, glass bottles, chip bags, sports balls. Additionally, monthly precipitation is shown for each year. Total precipitation (inches) in 2016 and 2017 was 39.95 and 32.93, respectively. Total weight (tons) of trash collected in 2016 and 2016 was 164.59 and 174.84, respectively. In 2016, months with the highest number of filled dumpsters were July (n=8), Feb (n=6), and June (n=6). In 2016, the two months with the highest precipitation were July (6.09") and Feb (5.32"). In 2017, months with the highest number of filled dumpsters were April (n=18), Aug (n=8), and May (n=8). In 2017, the months with the highest precipitation were July (7.09"), May (5.64"), and Aug (4.44"). These trends suggest an association between precipitation level and number of dumpsters filled. In 2016, the median number of sports balls in a dumpster was 26.
 
 ### Problem 3
 
 Load BRFSS dataset
-```{r, collapse=TRUE}
+
+``` r
 library(p8105.datasets)
 
 data(brfss_smart2010)
 ```
 
 Clean BRFSS dataset
-```{r}
+
+``` r
 brfss = brfss_smart2010 %>% 
   janitor::clean_names() %>% 
   filter(topic == "Overall Health") %>% 
@@ -193,26 +270,30 @@ brfss = brfss_smart2010 %>%
 
 #### BRFSS Observations
 
-1. BRFSS dataset represents `r brfss %>% distinct(county, state) %>% nrow()` distinct locations
-2. Including the District of Columbia and 50 states, there are `r brfss %>% distinct(state) %>% nrow()`
-3. NJ was the most observed state, with 146 observations
-4. In 2002, the median proportion of "excellent" responses across all surveyed counties was 23.60
+1.  BRFSS dataset represents 404 distinct locations
+2.  Including the District of Columbia and 50 states, there are 51
+3.  NJ was the most observed state, with 146 observations
+4.  In 2002, the median proportion of "excellent" responses across all surveyed counties was 23.60
 
-```{r, collapse=TRUE}
+``` r
 #1. 404 unique locations in dataset
 brfss %>% 
   distinct(county, state) %>% 
   nrow()
+## [1] 404
 
 #2. number of states represented & DC = 51
 brfss %>% 
   distinct(state) %>% 
   nrow()
+## [1] 51
 
 #3. state observed the most
 plyr::count(brfss$state) %>% 
   arrange(desc(freq)) %>% 
   head(1)
+##    x freq
+## 1 NJ  146
 
 #4. median of the "excellent" proportion in 2002
 brfss %>% 
@@ -220,10 +301,15 @@ brfss %>%
   summarise(excellent = median(excellent, na.rm = TRUE)) %>% 
   arrange(year) %>% 
   head(1)
+## # A tibble: 1 x 2
+##    year excellent
+##   <int>     <dbl>
+## 1  2002      23.6
 ```
 
-Histogram characterizes the distribution of excellent response proportions across counties that participated in the 2002 health status survey. 
-```{r, message=FALSE, warning=FALSE}
+Histogram characterizes the distribution of excellent response proportions across counties that participated in the 2002 health status survey.
+
+``` r
 #5. histogram of excellent response values in the year 2002
 brfss_2002 = brfss %>% 
   filter(year == 2002) 
@@ -236,8 +322,11 @@ ggplot(brfss_2002, aes(x = excellent)) +
     y = "Number of Counties")
 ```
 
+<img src="p8105_hw2_jh4054_files/figure-markdown_github/unnamed-chunk-10-1.png" width="90%" />
+
 Scatterplot characterizes the proportion of "excellent" responses in New York County and Queens County from 2002 to 2010.
-```{r}
+
+``` r
 #6. scatterplot showing proportion of "excellent" response values in New York County and Queens County (both in NY State) in each year from 2002 to 2010
 brfss %>% 
   filter(county == "New York County" | county == "Queens County") %>% 
@@ -253,4 +342,4 @@ brfss %>%
     discrete = TRUE)
 ```
 
-
+<img src="p8105_hw2_jh4054_files/figure-markdown_github/unnamed-chunk-11-1.png" width="90%" />
